Modifications to allow interaction from outside RRE.